fix for bug #211078 addressbook views shows blank name field, when we could use email address. important for tbird, and mscott's contact list in the compose window. r/sr=bienvenu